paragraph마다 다르게 적용

--- a/index.css
+++ b/index.css
@@ -7,7 +7,17 @@ h6 {
   background-color: black;
 }
 p {
+  background-color: bisque;
+}
+#p1 {
   color: red;
+}
+#p2 {
+  color: green;
+  background-color: bisque;
+}
+#p3 {
+  color: blue;
   background-color: bisque;
 }
 pre {
