--- a/index.css
+++ b/index.css
@@ -24,3 +24,12 @@ pre {
   color: aqua;
   background-color: black;
 }
+table,
+th,
+td {
+  border: 1px solid black;
+  padding: 8px;
+}
+th {
+  color: blue;
+}
